source/ROS2/Sensor_Ros2/log/build_2025-10-14_16-56-49/crop_task_vision/stderr.log
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/crop_task_vision/src/crop_task_node.cpp: In member function ‘void crop_task_vision::CropTaskNode::on_image(const ConstSharedPtr&)’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/crop_task_vision/src/crop_task_node.cpp:172:5: error: operands to ‘?:’ have different types ‘rclcpp::Time’ and ‘const _stamp_type’ {aka ‘const builtin_interfaces::msg::Time_<std::allocator<void> >’}
  171 |   const rclcpp::Time stamp = msg->header.stamp.sec == 0 && msg->header.stamp.nanosec == 0
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  172 |     ? get_clock()->now()
      |     ^~~~~~~~~~~~~~~~~~~~
  173 |     : msg->header.stamp;
      |     ~~~~~~~~~~~~~~~~~~~
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/crop_task_vision/src/crop_task_node.cpp:172:5: note:   and each type can be converted to the other
gmake[2]: *** [CMakeFiles/crop_task_node_lib.dir/build.make:76: CMakeFiles/crop_task_node_lib.dir/src/crop_task_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/crop_task_node_lib.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
